--- a/css/style.css
+++ b/css/style.css
@@ -8,33 +8,26 @@
 }
 
 body {
-	font-family: 'Varela Round', sans-serif;
+	font-family: 'Merriweather', serif;
 	line-height: 1.6;
-	color: #3a3a3a;
+	color: #7f7f7f;
+	background-color: #fafafa;
+	text-align: center;
+	font-size: 1.3125em;
+}
+
+h2, h3 {
+	font-family: 'Lato', sans-serif;
+	color: #4a4a4a;
 }
 
 p {
-	font-size: .95em;
-	margin-bottom: 1.8em;
-}
-
-h2,
-h3,
-a {
-	color: #093a58;
-}
-
-h2,
-h3,
-h4 {
-	margin-top: 0;
-}
-
-h4 {
-	margin-bottom: .4em;
+	margin-bottom: 1em;
 }
 
 a {
+	font-family: 'Lato', sans-serif;
+	color: #4a4a4a;
 	text-decoration: none;
 }
 
@@ -51,11 +44,8 @@ figure {
 figcaption {
 	font-size: .9em;
 	line-height: 1.5;
-	color: #fff;
 	padding: 1em;
-	background: rgba(19,43,102, .85);
 
-	position: absolute;
 	bottom: 0;
 	width: 100%;
 }
@@ -64,70 +54,177 @@ figcaption {
   Base Layout Styles
 ==================================== */
 
+.container {
+	width: 100%;
+	margin: 0 auto;
+}
+
 /* ---- Navigation ---- */
 
 .name {
-	font-size: 1.25em;
+	font-size: 1.18em;
 	margin: 0;
+	padding: .5em 0 1em;
 }
 
 .main-nav {
+	display: block;
 	margin-top: 5px;
 }
-
-	.name a,
 	.main-nav a {
 		display: block;
 		text-align: center;
-		padding: 10px 15px;
-	}
-
-	.main-nav a {
-		font-size: .95em;
-		color: #3acec2;
+		padding: 14px 15px;
+		font-size: .68em;
+		font-weight: bold;
 		text-transform: uppercase;
 	}
 
-	.main-nav a:hover {
-		color: #093a58;
+	.main-nav a:hover, .footer-nav a:hover {
+		color: #0399ff;
 	}
+
+	.main-nav li {
+		background-color: #ffffff;
+		margin: 5px 0;
+	}
+
+.blue-text {
+	color: #0399ff;
+}
 
 /* ---- Layout Containers ---- */
 
 .main-header {
-	padding-top: .5em;
-	padding-bottom: .5em;
+
 }
 
 .main-footer {
 	text-align: center;
+	margin-top: 0;
+	padding-left: .81em;
+	padding-right: .81em;
+	height: 74px;
 }
-
 
 .col {
-	padding-right: 1em;
-	padding-left: 1em;
+ 	width: 100%;
+	padding-top: .81em;
+	padding-right: .81em;
+	padding-bottom: .81em;
+	padding-left: .81em;
 }
 
-.main-footer {
-	background: #d9e4ea;
-	padding: 2em 0;
-	margin-top: 30px;
+.main-footer .col {
+	padding-top: 1em;
+	padding-bottom: 1em;
+	padding-left: 0;
+	padding-right: 0;
+	border-top: 1px solid #e7e7e7;
 }
 
-/* ---- Page Elements ---- */
+.main-footer .name {
+	font-size: .78em;
+	font-weight: bold;
+	float: left;
+	padding: 0;
+}
 
+.footer-nav {
+	font-size: .6em;
+	float: right;
+}
+	.footer-nav a {
+		display: block;
+		padding: 5px 0;
+		font-weight: bold;
+		text-transform: uppercase;
+	}
 
+/* ---- Page Sections ---- */
 
+.section-heading {
+	text-transform: uppercase;
+	font-size: .68em;
+	font-weight: bold;
+	padding-bottom: 2em;
+    margin: 0;
+}
+
+#portfolio {
+	padding-top: 2.5em;
+	padding-bottom: 2em;
+	background-color: #ffffff;
+}
+#portfolio h3 {
+	font-size: .9em;
+	font-weight: normal;
+	margin: 25px 0 15px;
+}
+#portfolio p {
+	color: #4a4a4a;
+	font-size: .7619em;
+	margin-top: 0;
+	margin-bottom: 0;
+}
+
+#skills {
+	padding-top: 2.5em;
+	padding-bottom: 2em;
+	background: lightgrey;
+}
+
+#skills ul.skills-list {
+	padding: 0;
+	text-align: center;
+}
+
+#skills .skills-list li {
+	font-size: .66em;
+	border-radius: 6px;
+	display: inline-block;
+	background: #0d66f2;
+	color: white;
+	padding: 5px 10px;
+	margin: 2px;
+}
+
+#skills .skills-list li:nth-child(odd) {
+	background: #0399ff;
+}
+
+#contact {
+	padding-top: 2.5em;
+	padding-bottom: 2em;
+}
+
+.hide-for-small {
+	display: none;
+}
+.hide-for-medium-up {
+	display: block;
+}
 
 /* =================================
   Media Queries
 ==================================== */
 
-@media (min-width: 769px) {
-
-	body {
-		padding-top: 68px;
+@media (min-width: 768px) {
+	.name {
+		padding: 0;
+	}
+	#intro {
+		padding-bottom: 2.5em;
+	}
+	#intro p {
+		margin-top: 0;
+		text-align: left;
+	}
+	.hide-for-medium-up {
+		display: none;
+	}
+	.hide-for-small {
+		display: block;
 	}
 
 	.main-header {
@@ -135,22 +232,69 @@ figcaption {
 	}
 
 	.container {
-		width: 90%;
+		width: 95%;
 		margin: 0 auto;
+	}
+
+	#contact .container {
+		width: 75%;
 	}
 
 	.col {
 		float: left;
+	 	width: 100%;
+		padding-top: .5em;
+		padding-right: .3em;
+		padding-bottom: .5em;
+		padding-left: .3em;
+	}
+
+	.main-header .col {
+		padding-top: 2.6em;
+	}
+
+	#intro .row.medium-two {
+		display: block;
+
+	}
+
+	.row.medium-two {
+		display: flex;
+		flex-flow: row wrap;
+	}
+
+	.row.medium-two .col {
+		width: 50%
+	}
+
+	.row.medium-two .col.push {
+		float: right;
+	}
+
+	.row.medium-two .col.pull {
+		float: left;
 	}
 
 	.main-nav {
-
+		display: inline-block;
+	}
+	.main-nav a {
+		padding: 20px 17px;
 	}
 
-	.main-nav li {
-
+	.main-nav li, .footer-nav li {
+		background-color: transparent;
+		float: left;
 	}
 
+	.footer-nav a {
+		display: block;
+		text-align: center;
+		padding: 5px 0 10px 15px;
+		font-size: .95em;
+		font-weight: bold;
+		text-transform: uppercase;
+	}
 
 	/* ---- Float clearfix ---- */
 
@@ -162,11 +306,30 @@ figcaption {
 
 }
 
-@media (min-width: 1025px) {
-
+@media (min-width: 1024px) {
+	.name {
+		float: left;
+		padding: 10px 0;
+	}
+	.main-nav {
+		display: inline-block;
+		margin-top: 0;
+		float: right;
+	}
 	.container {
 		width: 80%;
-
 	}
-
+	#contact .container {
+		width: 50%;
+	}
+	#intro .col figure {
+		float: right;
+	}
+	.row.large-three {
+		display: flex;
+		flex-flow: row wrap;
+	}
+	.row.large-three .col {
+		width: 33.33333%
+	}
 }
